# grpc_example

./: CMakeLists.txt  README.md  build.sh
protos/: CMakeLists.txt  text_update.proto
src/: client.cpp  server.cpp
